--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./сss/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <!-- Logo -->
       <nav class="site-nav">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo link"
           >Web<span class="span-logo">Studio</span></a
         >
         >
@@ -33,12 +33,12 @@
       <address>
         <ul class="site-contacts list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-link"
+            <a href="tel:+110001111111" class="contacts-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -57,7 +57,7 @@
       <!-- About us -->
       <section class="section">
         <h2 hidden class="section-title">Quality</h2>
-        <ul class="feature-list">
+        <ul class="feature-list" class="list">
           <li class="list">
             <h3 class="title">Strategy</h3>
             <p class="text">
@@ -119,10 +119,10 @@
         </ul>
       </section>
 
-      <section class="section">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="employees">
-          <li class="list">
+      <section class="section employees">
+        <h2 class="section-title-team">Our Team</h2>
+        <ul class="list employees-bgc">
+          <li>
             <img
               src="./images/our-team/markguerrero.jpg"
               alt="Mark Guerrero"
@@ -130,9 +130,9 @@
               height="260"
             />
             <h3 class="title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="text-our-team">Product Designer</p>
           </li>
-          <li class="list">
+          <li>
             <img
               src="./images/our-team/tomford.jpg"
               alt="Tom Ford"
@@ -140,9 +140,9 @@
               height="260"
             />
             <h3 class="title">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
+            <p class="text-our-team">Frontend Developer</p>
           </li>
-          <li class="list">
+          <li>
             <img
               src="./images/our-team/camilagarcia.jpg"
               alt="Camila Garcia"
@@ -150,9 +150,9 @@
               height="260"
             />
             <h3 class="title">Camila Garcia</h3>
-            <p class="text">Marketing</p>
+            <p class="text-our-team">Marketing</p>
           </li>
-          <li class="list">
+          <li>
             <img
               src="./images/our-team/danielwilson.jpg"
               alt="Daniel Wilson"
@@ -160,13 +160,13 @@
               height="260"
             />
             <h3 class="title">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
+            <p class="text-our-team">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="span-logo-footer">Studio</span></a
       >
 
