--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./сss/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <!-- Logo -->
       <nav class="site-nav">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo link"
           >Web<span class="span-logo">Studio</span></a
         >
 
@@ -33,12 +33,12 @@
       <address>
         <ul class="site-contacts list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-link"
+            <a href="tel:+110001111111" class="contacts-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -49,7 +49,7 @@
     <!-- Main -->
     <main>
       <section>
-        <h1>Portfolio</h1>
+        <h1 hidden>Portfolio</h1>
         <ul class="list">
           <li>
             <button type="button" class="button-secondary">All</button>
@@ -225,7 +225,7 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="span-logo-footer">Studio</span></a
       >
       <p class="text-footer">
