--- a/portfolio.html
+++ b/portfolio.html
@@ -11,34 +11,38 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./сss/styles.css" />
   </head>
   <body>
     <header>
       <!-- Logo -->
       <nav class="site-nav">
         <a href="./index.html" class="logo link"
-          >Web<span class="span-logo">Studio</span></a
+          >Web<span class="span-logo link">Studio</span></a
         >
 
         <!-- Navigations -->
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link current">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+        <ul class="site-nav-list list">
+          <li><a href="./index.html" class="link site-nav-list">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="link current site-nav-list"
+              >Portfolio</a
+            >
+          </li>
+          <li><a href="" class="link site-nav-list">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- Contacts -->
       <address>
-        <ul class="site-contacts list">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link link"
+            <a href="mailto:info@devstudio.com" class="contacts-list link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-link link"
+            <a href="tel:+110001111111" class="contacts-list link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -65,158 +69,114 @@
             <button type="button" class="button-secondary">Marketing</button>
           </li>
         </ul>
+
         <ul class="list">
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/app.jpg"
                 alt="app"
                 width="360"
                 height="300"
               />
-              <h2>Banking App Interface Concept</h2>
+              <h2 class="title">Banking App Interface Concept</h2>
               <p>App</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/payment.jpg"
                 alt="payment"
                 width="360"
                 height="300"
               />
-              <h2>Cashless Payment</h2>
+              <h2 class="title">Cashless Payment</h2>
               <p>Marketing</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/laptop.jpg"
                 alt="laptop"
                 width="360"
                 height="300"
               />
-              <h2>Meditation App</h2>
-              <p>App</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Meditation App</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/car.jpg"
                 alt="car"
                 width="360"
                 height="300"
               />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Taxi Service</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/display.jpg"
                 alt="display"
                 width="360"
                 height="300"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Screen Illustrations</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/girl.jpg"
                 alt="girl"
                 width="360"
                 height="300"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Online Courses</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/stories.jpg"
                 alt="stories"
                 width="360"
                 height="300"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/food.jpg"
                 alt="food"
                 width="360"
                 height="300"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Organic Food</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/coffee.jpg"
                 alt="coffee"
                 width="360"
                 height="300"
               />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p>
-              <p>
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
-              </p>
+              <h2 class="title">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
         </ul>
