--- a/index.html
+++ b/index.html
@@ -11,34 +11,38 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./сss/styles.css" />
   </head>
   <body>
     <header>
       <!-- Logo -->
       <nav class="site-nav">
         <a href="./index.html" class="logo link"
-          >Web<span class="span-logo">Studio</span></a
+          >Web<span class="span-logo link">Studio</span></a
         >
         >
         <!-- Navigations -->
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+        <ul class="site-nav-list list">
+          <li>
+            <a href="./index.html" class="link current site-nav-list">Studio</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="link site-nav-list">Portfolio</a>
+          </li>
+          <li><a href="" class="link site-nav-list">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- Contacts -->
       <address>
-        <ul class="site-contacts list">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link link"
+            <a href="mailto:info@devstudio.com" class="contacts-list link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-link link"
+            <a href="tel:+110001111111" class="contacts-list link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -51,28 +55,28 @@
       <!-- Hero -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="modal-open-btn">Order Service</button>
       </section>
 
-      <!-- About us -->
-      <section class="section">
+      <!-- About us section(2) -->
+      <section>
         <h2 hidden class="section-title">Quality</h2>
-        <ul class="feature-list" class="list">
-          <li class="list">
+        <ul class="list">
+          <li>
             <h3 class="title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="list">
+          <li>
             <h3 class="title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="list">
+          <li>
             <h3 class="title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
@@ -89,7 +93,8 @@
         </ul>
       </section>
 
-      <section class="section">
+      <!-- Section 3 -->
+      <section>
         <h2 class="section-title">What are we doing</h2>
         <ul class="list">
           <li>
@@ -119,10 +124,11 @@
         </ul>
       </section>
 
-      <section class="section employees">
-        <h2 class="section-title-team">Our Team</h2>
-        <ul class="list employees-bgc">
-          <li>
+      <!-- Section 4 -->
+      <section class="section-employees">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="our-team">
             <img
               src="./images/our-team/markguerrero.jpg"
               alt="Mark Guerrero"
@@ -130,9 +136,9 @@
               height="260"
             />
             <h3 class="title">Mark Guerrero</h3>
-            <p class="text-our-team">Product Designer</p>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team">
             <img
               src="./images/our-team/tomford.jpg"
               alt="Tom Ford"
@@ -140,9 +146,9 @@
               height="260"
             />
             <h3 class="title">Tom Ford</h3>
-            <p class="text-our-team">Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team">
             <img
               src="./images/our-team/camilagarcia.jpg"
               alt="Camila Garcia"
@@ -150,9 +156,9 @@
               height="260"
             />
             <h3 class="title">Camila Garcia</h3>
-            <p class="text-our-team">Marketing</p>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="our-team">
             <img
               src="./images/our-team/danielwilson.jpg"
               alt="Daniel Wilson"
@@ -160,7 +166,7 @@
               height="260"
             />
             <h3 class="title">Daniel Wilson</h3>
-            <p class="text-our-team">UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
