--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
 
       <!-- Contacts -->
-      <address>
+      <address class="contacts-adress">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-list link"
