--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
       </nav>
 
       <!-- Contacts -->
-      <address>
+      <address class="contacts-adress">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-list link"
@@ -80,7 +80,7 @@
                 height="300"
               />
               <h2 class="title">Banking App Interface Concept</h2>
-              <p>App</p>
+              <p class="text">App</p>
             </a>
           </li>
           <li>
@@ -92,7 +92,7 @@
                 height="300"
               />
               <h2 class="title">Cashless Payment</h2>
-              <p>Marketing</p>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li>
