--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         >
         >
         <!-- Navigations -->
-        <ul class="site-nav-list list">
+        <ul class="list">
           <li>
-            <a href="./index.html" class="link current site-nav-list">Studio</a>
+            <a href="./index.html" class="site-nav-list link current">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link site-nav-list">Portfolio</a>
+            <a href="./portfolio.html" class="site-nav-list link">Portfolio</a>
           </li>
-          <li><a href="" class="link site-nav-list">Contacts</a></li>
+          <li><a href="" class="site-nav-list link">Contacts</a></li>
         </ul>
       </nav>
 
