--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
         >
 
         <!-- Navigations -->
-        <ul class="site-nav-list list">
-          <li><a href="./index.html" class="link site-nav-list">Studio</a></li>
+        <ul class="list">
+          <li><a href="./index.html" class="site-nav-list link">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="link current site-nav-list"
+            <a href="./portfolio.html" class="site-nav-list link current"
               >Portfolio</a
             >
           </li>
-          <li><a href="" class="link site-nav-list">Contacts</a></li>
+          <li><a href="" class="site-nav-list link">Contacts</a></li>
         </ul>
       </nav>
 
