--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Navigations -->
         <ul class="list">
           <li>
-            <a href="./index.html" class="site-nav-list link current">Studio</a>
+            <a href="./index.html" class="site-nav-list link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="site-nav-list link">Portfolio</a>
