--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,7 @@
         <ul class="list">
           <li><a href="./index.html" class="site-nav-list link">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="site-nav-list link current"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="site-nav-list link">Portfolio</a>
           </li>
           <li><a href="" class="site-nav-list link">Contacts</a></li>
         </ul>
